# DroneGame

./: .gitignore  CMakeLists.txt  README.md  README.tex  main.c
include/: macros.h
src/: blackboard.c  drone_dynamics.c  inspector_window.c  keyboard_manager.c  obstacles.c  targets_generator.c  watchdog.c
